Alterando variaveis de ambiente.

--- a/docker/.env-exemple
+++ b/docker/.env-exemple
@@ -7,8 +7,9 @@ DB_DATABASE=onfly_db
 DB_USERNAME=onfly
 DB_PASSWORD=onfly
 
+APP_KEY=onfly-test
 WATCHER_ENABLED=true
-WATCHER_INTERVAL=1.0
+WATCHER_INTERVAL=1000
 
 # DB Mysql
 MYSQL_ROOT_PASSWORD=root_onfly
