Correções no expenses.deleted e add validações.

--- a/docker/.env-exemple
+++ b/docker/.env-exemple
@@ -1,5 +1,5 @@
 # API
-APP_ENV=api_hyperf
+APP_ENV=dev
 SWOOLE_SERVER=9501
 DB_HOST=mysql
 DB_PORT=3306
@@ -7,7 +7,7 @@ DB_DATABASE=onfly_db
 DB_USERNAME=onfly
 DB_PASSWORD=onfly
 
-APP_KEY=onfly-test
+APP_KEY=ONFLY
 WATCHER_ENABLED=true
 WATCHER_INTERVAL=1000
 
